namespace SalamanderBank;

class Program
{
    public static async Task Main(string[] args)
    {
        await Ui.RunProgram();
    }
}